--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ CLERK_SECRET_KEY=your-key
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your-key
 NEXT_PUBLIC_SUPABASE_KEY=your-key
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
+GOOGLE_API_KEY=your-google-api-key
