--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"supabase": "^1.142.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
+		"together-ai": "^0.13.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
